--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -33,6 +33,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           export SONAR_ORGANIZATION=$(echo ${GITHUB_REPOSITORY} | cut -d / -f 1)
+          echo ${GITHUB_REF}
           export GITHUB_PULL_REQUEST=$(cut -d / -f 3 <(echo ${GITHUB_REF}))
           sonar-scanner \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
