--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "GitHub Action that checks if the project version has been updated",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint index.js",
-    "package": "ncc build index.js --minify",
-    "test": "eslint index.js && jest"
+    "lint": "eslint src/index.js",
+    "package": "ncc build src/index.js --minify",
+    "test": "eslint src/index.js && jest"
   },
   "repository": {
     "type": "git",
