--- a/action.yml
+++ b/action.yml
@@ -2,7 +2,7 @@ name: actions-project-version-check
 description: Checks if the project version has been updated
 inputs:
   token:
-    description: 'The repository token is used to request the target branch `pom.xml`-file from the [GitHub API](https://developer.github.com/v3/repos/contents/#get-contents)'
+    description: 'The repository token is used to request the target branch `file-to-check`-file from the [GitHub API](https://developer.github.com/v3/repos/contents/#get-contents)'
     required: true
   file-to-check:
     description: 'Filename (with path) that must contain the project version update (examples: pom.xml, package.json, version.txt)'
