--- a/package.json
+++ b/package.json
@@ -33,6 +33,16 @@
     "@zeit/ncc": "^0.20.5",
     "eslint": "^6.3.0",
     "jest": "^24.9.0",
+    "lint-staged": "^10.1.2",
     "nock": "^12.0.3"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm package",
+      "git add"
+    ]
   }
 }
