--- a/package.json
+++ b/package.json
@@ -33,16 +33,9 @@
     "@zeit/ncc": "^0.20.5",
     "eslint": "^6.3.0",
     "jest": "^24.9.0",
-    "lint-staged": "^10.1.2",
-    "nock": "^12.0.3"
+    "pre-commit": "^1.2.2"
   },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.js": [
-      "npm package",
-      "git add"
-    ]
-  }
+  "pre-commit": [
+    "package"
+  ]
 }
