--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run package"
     }
   },
   "lint-staged": {
