--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint src/index.js",
     "package": "ncc build src/index.js --minify",
-    "test": "eslint src/index.js && jest"
+    "test": "eslint src/index.js && jest",
+    "packageAndAddToCommit": "ncc build src/index.js --minify && git add dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -32,19 +33,10 @@
   "devDependencies": {
     "@zeit/ncc": "^0.20.5",
     "eslint": "^6.3.0",
-    "husky": "^4.2.3",
     "jest": "^24.9.0",
-    "lint-staged": "^10.1.2"
+    "pre-commit": "^1.2.2"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run package"
-    }
-  },
-  "lint-staged": {
-    "*": [
-      "npm run package",
-      "git add"
-    ]
-  }
+  "pre-commit": [
+    "packageAndAddToCommit"
+  ]
 }
