--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,3 +18,20 @@ jobs:
         run: |
           npm install
           npm test
+
+      - name: get-project-version-check ()
+        id: actions_project_version_check
+        uses: ./
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          file-to-check: package.json
+          additional-files-to-check: README.md
+
+      - name: create-release
+        run: |
+          export projectVersion=${{ steps.actions_project_version_check.outputs.version }}
+          export majorProjectVersion=$(cut -d "." -f1 <<< $projectVersion)
+          git tag -fa v$majorProjectVersion -m 'Update'
+          export minorProjectVersion=$(cut -d "." -f2 <<< $projectVersion)
+          git tag -fa v$majorProjectVersion.$minorProjectVersion -m 'Update'
+          git push -follow-tags --force
