--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: verify-project-version (output from actions_project_version_check)
         run: |
-          [[ -z ${{ steps.actions_project_version_check.outputs.version }} ]] && exit 1;
+          [[ -z "${{ steps.actions_project_version_check.outputs.version }}" ]] && exit 1;
 
       - name: get-project-version (integration-test)
         id: actions_project_version_check_get
@@ -35,7 +35,7 @@ jobs:
 
       - name: verify-project-version (output from actions_project_version_check_get)
         run: |
-          [[ -z ${{ steps.actions_project_version_check_get.outputs.version }} ]] && exit 1;
+          [[ -z "${{ steps.actions_project_version_check_get.outputs.version }}" ]] && exit 1;
 
       - name: test
         run: |
