--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,4 +35,4 @@ jobs:
           git tag -fa v$majorProjectVersion -m 'Update'
           export minorProjectVersion=$(cut -d "." -f2 <<< $projectVersion)
           git tag -fa v$majorProjectVersion.$minorProjectVersion -m 'Update'
-          git push -follow-tags --force
+          git push --follow-tags --force
