--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -23,7 +23,8 @@ jobs:
 
       - name: verify-project-version (output from actions_project_version_check)
         run: |
-          [ -z "${{ steps.actions_project_version_check.outputs.version }}" ] && exit 1
+          export projectVersionFirst=${{ steps.actions_project_version_check.outputs.version }}
+          [ -z "$projectVersionFirst" ] && exit 1
 
       - name: get-project-version (integration-test)
         id: actions_project_version_check_get
@@ -35,7 +36,8 @@ jobs:
 
       - name: verify-project-version (output from actions_project_version_check_get)
         run: |
-          [ -z "${{ steps.actions_project_version_check_get.outputs.version }}" ] && exit 1
+          export projectVersionSecond=${{ steps.actions_project_version_check_get.outputs.version }}
+          [ -z "$projectVersionSecond" ] && exit 1
 
       - name: test
         run: |
