--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -23,8 +23,7 @@ jobs:
 
       - name: verify-project-version (output from actions_project_version_check)
         run: |
-          export projectVersionFirst=${{ steps.actions_project_version_check.outputs.version }}
-          [ -z "$projectVersionFirst" ] && exit 1
+          [ -v ${{ steps.actions_project_version_check.outputs.version }} ] && exit 1
 
       - name: get-project-version (integration-test)
         id: actions_project_version_check_get
@@ -37,7 +36,7 @@ jobs:
       - name: verify-project-version (output from actions_project_version_check_get)
         run: |
           export projectVersionSecond=${{ steps.actions_project_version_check_get.outputs.version }}
-          [ -z "$projectVersionSecond" ] && exit 1
+          [ -v ${{ steps.actions_project_version_check_get.outputs.version }} ] && exit 1
 
       - name: test
         run: |
