--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,9 +35,14 @@ jobs:
         run: |
           git config --global user.email $releaseEmail
           git config --global user.name $releaseName
+
           git tag -fa v$projectVersion -m 'Release'
+          git push origin v$projectVersion
+
           export majorProjectVersion=$(cut -d "." -f1 <<< $projectVersion)
           git tag -fa v$majorProjectVersion -m 'Update'
+          git push origin --force v$majorProjectVersion
+
           export minorProjectVersion=$(cut -d "." -f2 <<< $projectVersion)
           git tag -fa v$majorProjectVersion.$minorProjectVersion -m 'Update'
-          git push --follow-tags --force
+          git push origin --force v$majorProjectVersion.$minorProjectVersion
