--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -36,20 +36,24 @@ jobs:
 
       - name: create-release
         env:
-          releaseEmail: ${{ secrets.RELEASE_EMAIL }}
-          releaseName: ${{ secrets.RELEASE_NAME }}
+          releaseEmail: "action@github.com"
+          releaseName: "GitHub Action"
           projectVersion: ${{ steps.actions_project_version_check.outputs.version }}
         run: |
           git config --global user.email $releaseEmail
           git config --global user.name $releaseName
 
           git tag -fa v$projectVersion -m 'Release'
-          git push origin v$projectVersion
 
           export majorProjectVersion=$(cut -d "." -f1 <<< $projectVersion)
           git tag -fa v$majorProjectVersion -m 'Update'
-          git push origin --force v$majorProjectVersion
 
           export minorProjectVersion=$(cut -d "." -f2 <<< $projectVersion)
           git tag -fa v$majorProjectVersion.$minorProjectVersion -m 'Update'
-          git push origin --force v$majorProjectVersion.$minorProjectVersion
+
+      - name: push-release
+        uses: ad-m/github-push-action@v0.5.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          force: true
+          tags: true
