--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -14,11 +14,20 @@ jobs:
         uses: actions/checkout@v1
  
       - name: project-version-check (integration-test)
+        id: actions_project_version_check
         uses: ./
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           file-to-check: package.json
           additional-files-to-check: README.md
+
+      - name: get-project-version (integration-test)
+        id: actions_project_version_check_get
+        uses: ./
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          file-to-check: package.json
+          only-return-version: true
 
       - name: test
         run: |
