Fix version not as output if 'only-return-version' true

--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -21,6 +21,12 @@ jobs:
           file-to-check: package.json
           additional-files-to-check: README.md
 
+      - name: project-version-output-check
+        run: |
+          if [ -z "${{ steps.actions_project_version_check.outputs.version }}" ] then;
+            exit 1;
+          fi
+
       - name: get-project-version (integration-test)
         id: actions_project_version_check_get
         uses: ./
@@ -28,6 +34,12 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           file-to-check: package.json
           only-return-version: true
+
+      - name: get-project-version-output-check
+        run: |
+          if [ -z "${{ steps.get_project_version_check.outputs.version }}" ] then;
+            exit 1;
+          fi
 
       - name: test
         run: |
