--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -23,7 +23,8 @@ jobs:
 
       - name: project-version-output-check
         run: |
-          if [ -z "${{ steps.actions_project_version_check.outputs.version }}" ] then;
+          if [ -z "${{ steps.actions_project_version_check.outputs.version }}" ] 
+          then
             exit 1
           fi
 
@@ -37,7 +38,8 @@ jobs:
 
       - name: get-project-version-output-check
         run: |
-          if [ -z "${{ steps.get_project_version_check.outputs.version }}" ] then;
+          if [ -z "${{ steps.get_project_version_check.outputs.version }}" ] 
+          then
             exit 1
           fi
 
