--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
   },
   "homepage": "https://github.com/avides/actions-project-version-check#readme",
   "dependencies": {
-    "@actions/core": "^1.6.0",
-    "@actions/github": "^5.0.1",
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
     "semver-diff": "^3.1.1",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.22.3",
-    "eslint": "^8.13.0",
-    "jest": "^27.5.1",
+    "@vercel/ncc": "^0.36.1",
+    "eslint": "^8.35.0",
+    "jest": "^29.4.3",
     "pre-commit": "^1.2.2"
   },
   "pre-commit": [
