--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "actions-project-version-check",
-  "version": "1.4.0",
+  "version": "2.0.0",
   "description": "GitHub Action that checks if the project version has been updated",
-  "main": "dist/index.js",
+  "exports": "./dist/index.js",
   "scripts": {
     "lint": "eslint src/index.js",
     "package": "ncc build src/index.js --minify",
@@ -18,22 +18,22 @@
     "Actions",
     "JavaScript"
   ],
-  "author": "Henrik Adamski",
+  "author": "Henrik Adamski & Finn Egbers",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/avides/actions-project-version-check/issues"
   },
   "homepage": "https://github.com/avides/actions-project-version-check#readme",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1",
+    "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.0",
     "semver-diff": "^3.1.1",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.36.1",
-    "eslint": "^8.35.0",
-    "jest": "^29.4.3",
+    "@vercel/ncc": "^0.38.3",
+    "eslint": "^9.19.0",
+    "jest": "^29.7.0",
     "pre-commit": "^1.2.2"
   },
   "pre-commit": [
